; ModuleID = '/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_parse_type_qualifier_list.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_parse_type_qualifier_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@YY_CONST = common dso_local global i32 0, align 4
@YY___CONST = common dso_local global i32 0, align 4
@YY___CONST__ = common dso_local global i32 0, align 4
@YY_RESTRICT = common dso_local global i32 0, align 4
@YY___RESTRICT = common dso_local global i32 0, align 4
@YY___RESTRICT__ = common dso_local global i32 0, align 4
@YY_VOLATILE = common dso_local global i32 0, align 4
@YY___VOLATILE = common dso_local global i32 0, align 4
@YY___VOLATILE__ = common dso_local global i32 0, align 4
@YY__ATOMIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"\00\00\FE\07\00\00\00\00\00\00\00\00\00\00", align 1
@YY___ATTRIBUTE = common dso_local global i32 0, align 4
@YY___ATTRIBUTE__ = common dso_local global i32 0, align 4
@YY___DECLSPEC = common dso_local global i32 0, align 4
@YY___CDECL = common dso_local global i32 0, align 4
@YY___STDCALL = common dso_local global i32 0, align 4
@YY___FASTCALL = common dso_local global i32 0, align 4
@YY___THISCALL = common dso_local global i32 0, align 4
@YY___VECTORCALL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"\00\00\00\00\00\00\F0\0F\00\00\00\00\00\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"unexpected\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"\00\00\FE\07\00\00\F0\0F\00\00\00\00\00\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @parse_type_qualifier_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_type_qualifier_list(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  br label %5

5:                                                ; preds = %44, %2
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @YY_CONST, align 4
  %8 = load i32, i32* @YY___CONST, align 4
  %9 = load i32, i32* @YY___CONST__, align 4
  %10 = load i32, i32* @YY_RESTRICT, align 4
  %11 = load i32, i32* @YY___RESTRICT, align 4
  %12 = load i32, i32* @YY___RESTRICT__, align 4
  %13 = load i32, i32* @YY_VOLATILE, align 4
  %14 = load i32, i32* @YY___VOLATILE, align 4
  %15 = load i32, i32* @YY___VOLATILE__, align 4
  %16 = load i32, i32* @YY__ATOMIC, align 4
  %17 = call i64 @YY_IN_SET(i32 %6, i32 %16, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %5
  %20 = load i32, i32* %3, align 4
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @parse_type_qualifier(i32 %20, i32* %21)
  store i32 %22, i32* %3, align 4
  br label %43

23:                                               ; preds = %5
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @YY___ATTRIBUTE, align 4
  %26 = load i32, i32* @YY___ATTRIBUTE__, align 4
  %27 = load i32, i32* @YY___DECLSPEC, align 4
  %28 = load i32, i32* @YY___CDECL, align 4
  %29 = load i32, i32* @YY___STDCALL, align 4
  %30 = load i32, i32* @YY___FASTCALL, align 4
  %31 = load i32, i32* @YY___THISCALL, align 4
  %32 = load i32, i32* @YY___VECTORCALL, align 4
  %33 = call i64 @YY_IN_SET(i32 %24, i32 %32, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %23
  %36 = load i32, i32* %3, align 4
  %37 = load i32*, i32** %4, align 8
  %38 = call i32 @parse_attributes(i32 %36, i32* %37)
  store i32 %38, i32* %3, align 4
  br label %42

39:                                               ; preds = %23
  %40 = load i32, i32* %3, align 4
  %41 = call i32 @yy_error_sym(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i32 %40)
  br label %42

42:                                               ; preds = %39, %35
  br label %43

43:                                               ; preds = %42, %19
  br label %44

44:                                               ; preds = %43
  %45 = load i32, i32* %3, align 4
  %46 = load i32, i32* @YY_CONST, align 4
  %47 = load i32, i32* @YY___CONST, align 4
  %48 = load i32, i32* @YY___CONST__, align 4
  %49 = load i32, i32* @YY_RESTRICT, align 4
  %50 = load i32, i32* @YY___RESTRICT, align 4
  %51 = load i32, i32* @YY___RESTRICT__, align 4
  %52 = load i32, i32* @YY_VOLATILE, align 4
  %53 = load i32, i32* @YY___VOLATILE, align 4
  %54 = load i32, i32* @YY___VOLATILE__, align 4
  %55 = load i32, i32* @YY__ATOMIC, align 4
  %56 = load i32, i32* @YY___ATTRIBUTE, align 4
  %57 = load i32, i32* @YY___ATTRIBUTE__, align 4
  %58 = load i32, i32* @YY___DECLSPEC, align 4
  %59 = load i32, i32* @YY___CDECL, align 4
  %60 = load i32, i32* @YY___STDCALL, align 4
  %61 = load i32, i32* @YY___FASTCALL, align 4
  %62 = load i32, i32* @YY___THISCALL, align 4
  %63 = load i32, i32* @YY___VECTORCALL, align 4
  %64 = call i64 @YY_IN_SET(i32 %45, i32 %63, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  %65 = icmp ne i64 %64, 0
  br i1 %65, label %5, label %66

66:                                               ; preds = %44
  %67 = load i32, i32* %3, align 4
  ret i32 %67
}

declare dso_local i64 @YY_IN_SET(i32, i32, i8*) #1

declare dso_local i32 @parse_type_qualifier(i32, i32*) #1

declare dso_local i32 @parse_attributes(i32, i32*) #1

declare dso_local i32 @yy_error_sym(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
